[gd_scene load_steps=3 format=3 uid="uid://b27f7s63k0sto"]

[ext_resource type="Script" uid="uid://c60ekd8uqviiq" path="res://scripts/ui/BlueprintBuilderUI.gd" id="1"]
[ext_resource type="Script" uid="uid://caavq7lqr8c5s" path="res://scripts/ui/BlueprintGrid.gd" id="2"]

[node name="BlueprintBuilderUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="LeftPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.7
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BlueprintGrid" type="Control" parent="LeftPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("2")

[node name="RightPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.7
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Scroll" type="ScrollContainer" parent="RightPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0

[node name="VBox" type="VBoxContainer" parent="RightPanel/Scroll"]
layout_mode = 2

[node name="BottomBar" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -64.0
grow_horizontal = 0
grow_vertical = 2
mouse_filter = 0

[node name="TotalCost" type="Label" parent="BottomBar"]
layout_mode = 2
text = "Cost: 0"

[node name="Validation" type="Label" parent="BottomBar"]
layout_mode = 2
text = "Valid"

[node name="ClearButton" type="Button" parent="BottomBar"]
layout_mode = 2
text = "Clear"

[node name="SaveButton" type="Button" parent="BottomBar"]
layout_mode = 2
text = "Save"

[node name="BuildButton" type="Button" parent="BottomBar"]
layout_mode = 2
text = "Build"
